[tool.poetry]
name = "coding4everybody-street-fighter"
version = "0.1.0"
description = ""
authors = ["snowham <soham1053@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
reference = "^0.0.3"
pygame = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
